form select fields

--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -28,3 +28,7 @@
 <div>
   <icc-textarea-field [fieldConfig]="textareaConfig" [value]="textareaValue"></icc-textarea-field>
 </div>
+
+<div>
+  <icc-select-field [fieldConfig]="multiSelectionRemote" [value]="multiObjectStates"></icc-select-field>
+</div>
