form select fields

--- a/projects/icc/fields/src/fieldset/fieldset.component.html
+++ b/projects/icc/fields/src/fieldset/fieldset.component.html
@@ -2,6 +2,7 @@
   <legend *ngIf="fieldConfig.legend !== undefined">{{ fieldConfig.legend }}</legend>
 
   <ng-container *ngFor="let config of formFields; trackBy: trackByIndex; let index = index">
-    <icc-fields [fieldConfig]="config" [form]="form"> </icc-fields>
+    <icc-fields *ngIf="config.fieldType !== 'fieldset'" [fieldConfig]="config" [form]="form"> </icc-fields>
+    <icc-fieldset *ngIf="config.fieldType === 'fieldset'" [fieldConfig]="fieldConfig" [form]="form"> </icc-fieldset>
   </ng-container>
 </fieldset>
