--- a/projects/icc/fields/src/fieldset/fieldset.component.scss
+++ b/projects/icc/fields/src/fieldset/fieldset.component.scss
@@ -1,7 +1,7 @@
 :host {
   fieldset {
     display: flex;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
     legend {
       width: 100%;
       margin-bottom: 2px;
