--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -2,7 +2,8 @@
   .icc-form-field {
     padding-left: 5px;
     padding-right: 5px;
-    margin-bottom: 3px;
+    //margin-bottom: 3px;
+    padding-bottom: 3px;
     position: relative;
 
     ::ng-deep input {
