--- a/projects/icc/fields/src/_fields.component.theme.scss
+++ b/projects/icc/fields/src/_fields.component.theme.scss
@@ -2,19 +2,11 @@
   [iccInput] {
     height: 1.75rem;
     border: none;
-
-    background-color: icc-theme(icc-form-field-input-background-color);
+    background-color: transparent;
     color: icc-theme(app-text-basic-color);
-    border-bottom: 1px solid icc-theme(app-border-basic-color);
 
     &.input-full-width {
       width: 100%;
-    }
-
-    &:focus {
-      outline: none;
-      background-color: icc-theme(icc-form-field-focus-background-color);
-      border-color: icc-theme(icc-form-field-focus-border-color);
     }
 
     &.appearance-ghost {
@@ -27,15 +19,9 @@
   textarea[iccInput] {
     display: block;
     height: 3.5rem;
-    background: icc-theme(icc-form-field-input-background-color);
     border: 1px solid icc-theme(app-border-basic-color);
     padding: 0.375rem;
     line-height: 0.9375rem;
-
-    &:focus {
-      background: icc-theme(icc-form-field-focus-background-color);
-      border-color: icc-theme(icc-form-field-focus-border-color);
-    }
   }
 
   /* hide input spin with type=number */
