--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -4,7 +4,11 @@
       <span class="icc-form-field-required-marker" *ngIf="_control && _control.required && !_control.disabled">*</span>
       <ng-content select="icc-label"></ng-content>:
     </label>
-    <div class="icc-form-field-wrapper" (click)="_control && _control.onContainerClick($event)">
+    <div
+      class="icc-form-field-wrapper"
+      [ngStyle]="{ width: fieldWidth }"
+      (click)="_control && _control.onContainerClick($event)"
+    >
       <div class="icc-form-field-container">
         <div class="icc-form-field-infix" #inputContainer>
           <ng-content></ng-content>
