--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -1,6 +1,10 @@
 <ng-container *ngIf="fieldConfig$ | async as fieldConfig">
   <ng-container *ngIf="form" [formGroup]="form">
-    <icc-form-field *ngIf="selectOptions$ | async as selectOptions" [iccLabelWidth]="fieldConfig.labelWidth">
+    <icc-form-field
+      *ngIf="selectOptions$ | async as selectOptions"
+      [iccLabelWidth]="fieldConfig.labelWidth"
+      [iccFieldWidth]="fieldConfig.fieldWidth"
+    >
       <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
         {{ fieldConfig.fieldLabel }}
       </icc-label>
