--- a/projects/icc/fields/src/radio-group-field/radio.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio.component.html
@@ -1,4 +1,15 @@
 <label>
+  <input type="radio" [name]="name" [value]="value" [checked]="checked" [formControl]="field" />
+  <span class="icc-radio-outer-circle"></span>
+  <span class="icc-radio-inner-circle"></span>
+  <span class="icc-radio-label-content">
+    <ng-content></ng-content>
+  </span>
+</label>
+
+<!--
+    [disabled]="disabled"
+<label>
   <input
     type="radio"
     class="cdk-visually-hidden"
@@ -6,6 +17,7 @@
     [value]="value"
     [checked]="checked"
     [disabled]="disabled"
+
   />
   <span class="icc-radio-outer-circle"></span>
   <span class="icc-radio-inner-circle"></span>
@@ -13,9 +25,5 @@
     <ng-content></ng-content>
   </span>
 </label>
-<!--
-    [name]="name"
-    [value]="value"
-    [checked]="checked"
-    
-    -->
+
+-->
