--- a/projects/icc/radio/src/radio.component.html
+++ b/projects/icc/radio/src/radio.component.html
@@ -5,7 +5,7 @@
     [name]="name"
     [value]="value"
     [checked]="checked"
-    [disabled]="disabled"
+    [formControl]="field"
   />
   <span class="icc-radio-outer-circle"></span>
   <span class="icc-radio-inner-circle"></span>
@@ -13,9 +13,24 @@
     <ng-content></ng-content>
   </span>
 </label>
+
 <!--
+    [disabled]="disabled"
+<label>
+  <input
+    type="radio"
+    class="cdk-visually-hidden"
     [name]="name"
     [value]="value"
     [checked]="checked"
-    
-    -->
+    [disabled]="disabled"
+
+  />
+  <span class="icc-radio-outer-circle"></span>
+  <span class="icc-radio-inner-circle"></span>
+  <span class="icc-radio-label-content">
+    <ng-content></ng-content>
+  </span>
+</label>
+
+-->
