uplaod file fields

--- a/projects/icc/fields/src/fields.component.html
+++ b/projects/icc/fields/src/fields.component.html
@@ -21,3 +21,6 @@
 
 <icc-textarea-field *ngIf="fieldConfig.fieldType === 'textarea'" [fieldConfig]="fieldConfig" [form]="form">
 </icc-textarea-field>
+
+<icc-upload-file-field *ngIf="fieldConfig.fieldType === 'uploadfile'" [fieldConfig]="fieldConfig" [form]="form">
+</icc-upload-file-field>
