--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -14,5 +14,9 @@
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+
+    <ng-container>
+      <icc-field-errors></icc-field-errors>
+    </ng-container>
   </icc-form-field>
 </ng-container>
