--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -19,7 +19,7 @@
   icc-form-field {
     icc-error {
       color: orange;
-
+      white-space: nowrap;
       icc-icon {
         padding-right: 0.375rem;
       }
