--- a/projects/icc/fields/src/password-field/password-field.component.html
+++ b/projects/icc/fields/src/password-field/password-field.component.html
@@ -8,8 +8,13 @@
       type="password"
       autocomplete="off"
       [formControlName]="fieldConfig.fieldName!"
+      (keyup)="onChange()"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+
+    <ng-container *ngIf="field?.touched && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </ng-container>
   </icc-form-field>
 </ng-container>
