--- a/projects/icc/fields/src/textarea-field/textarea-field.component.html
+++ b/projects/icc/fields/src/textarea-field/textarea-field.component.html
@@ -13,5 +13,9 @@
     >
     </textarea>
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+
+    <ng-container *ngIf="field?.touched && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </ng-container>
   </icc-form-field>
 </ng-container>
