--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -15,8 +15,8 @@
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
 
-    <ng-container>
-      <icc-field-errors></icc-field-errors>
+    <ng-container *ngIf="field?.touched && field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
     </ng-container>
   </icc-form-field>
 </ng-container>
