--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -18,5 +18,9 @@
       (valueChange)="onChange($event)"
     ></icc-calendar>
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
+
+    <ng-container *ngIf="field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </ng-container>
   </icc-form-field>
 </ng-container>
