--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -51,6 +51,10 @@
           </ng-container>
         </ng-template>
       </icc-autocomplete>
+
+      <ng-container *ngIf="field?.errors">
+        <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+      </ng-container>
     </icc-form-field>
   </ng-container>
 </ng-container>
