--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
@@ -14,5 +14,9 @@
         {{ group.title }}
       </icc-radio>
     </ng-container>
+
+    <ng-container *ngIf="field?.errors">
+      <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+    </ng-container>
   </icc-form-field>
 </ng-container>
