add field validator

--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.scss
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.scss
@@ -1,6 +1,6 @@
 :host {
   width: 100%;
-  ::ng-deep .icc-form-field-wrapper {
-    padding-left: 10px;
+  icc-radio:first-of-type {
+    padding-left: 5px;
   }
 }
