--- a/projects/icc/form-field/src/form-field.component.html
+++ b/projects/icc/form-field/src/form-field.component.html
@@ -17,8 +17,10 @@
           <ng-content select="[iccSuffix]"></ng-content>
         </div>
       </div>
+      <div class="icc-form-field-error">
+        <ng-content select="icc-form-field-errors"></ng-content>
+      </div>
       <div class="icc-form-field-hint">
-        <ng-content select="icc-error"></ng-content>
         <ng-content select="icc-hint"></ng-content>
       </div>
     </div>
