--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -1,5 +1,5 @@
 @mixin icc-form-field-theme() {
-  .icc-form-field-wrapper {
+  .icc-form-field-container {
     background-color: icc-theme(icc-form-field-input-background-color);
     color: icc-theme(app-text-basic-color);
     border-bottom: 1px solid icc-theme(app-border-basic-color);
@@ -12,16 +12,17 @@
     }
   }
 
-  .icc-form-field-wrapper:has(textarea) {
+  .icc-form-field-container:has(textarea) {
     border-bottom: none;
   }
 
   icc-form-field {
     icc-error {
       color: orange;
+      line-height: 20px;
       white-space: nowrap;
       icc-icon {
-        padding-right: 0.375rem;
+        padding: 0 0.375rem;
       }
     }
   }
