add field required mark

--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -10,6 +10,7 @@
       [calendarModal]="datepicker"
       [value]="field.value | localeDate"
       [placeholder]="fieldConfig.placeholder"
+      [required]="!!fieldConfig.required"
       readonly
     />
     <icc-calendar
