--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -19,6 +19,7 @@
         (blur)="onBlur()"
         [iccAutocomplete]="autocomplete"
         [iccAutocompleteClose]="autocompleteClose"
+        [required]="!!fieldConfig.required"
         placeholder="{{ fieldConfig.placeholder }}"
       />
       <icc-icon
