--- a/projects/icc/fields/src/password-field/password-field.component.html
+++ b/projects/icc/fields/src/password-field/password-field.component.html
@@ -9,6 +9,7 @@
       autocomplete="off"
       [formControlName]="fieldConfig.fieldName!"
       (keyup)="onChange()"
+      [required]="!!fieldConfig.required"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
