--- a/projects/icc/fields/src/number-field/number-field.component.html
+++ b/projects/icc/fields/src/number-field/number-field.component.html
@@ -12,7 +12,7 @@
       (keyup)="onChange()"
       (wheel)="onChange()"
       (blur)="onBlur()"
-      [required]="!!fieldConfig.required"
+      [required]="isRequired"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
