--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -11,7 +11,7 @@
       (click)="$event.stopPropagation()"
       (keyup)="onChange()"
       (blur)="onBlur()"
-      [required]="!!fieldConfig.required"
+      [required]="isRequired"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon *ngIf="fieldConfig.clearValue && hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
