--- a/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
+++ b/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
@@ -9,7 +9,7 @@
       type="file"
       class="upload-file-input"
       [formControlName]="fieldConfig.fieldName!"
-      [required]="!!fieldConfig.required"
+      [required]="isRequired"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon class="folder-open" icon="folder-open" iccSuffix (click)="fileInput.click()"></icc-icon>
