enable required fields

--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.html
@@ -1,1 +1,3 @@
 <icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
+
+<icc-form [formConfig]="formConfig2" [formFields]="formFields2" [values]="values2"></icc-form>
