readonly disabled fields

--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.html
@@ -1,3 +1,11 @@
-<icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
+<div>
+  <icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
+</div>
 
-<icc-form [formConfig]="formConfig2" [formFields]="formFields2" [values]="values2"></icc-form>
+<div>
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet2" [values]="values2"></icc-form>
+</div>
+
+<div>
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet3" [values]="values3"></icc-form>
+</div>
