--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -28,7 +28,12 @@
         iccSuffix
         (click)="clearSelected($event)"
       ></icc-icon>
-      <icc-icon icon="angle-down" iccSuffix [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"></icc-icon>
+      <icc-icon
+        *ngIf="!field.disabled"
+        icon="angle-down"
+        iccSuffix
+        [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"
+      ></icc-icon>
       <icc-icon *ngIf="isOverlayOpen" icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
       <icc-autocomplete
         #autocomplete="iccAutocomplete"
