--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -8,6 +8,7 @@
       iccInput
       iccCalendarToggle
       [calendarModal]="datepicker"
+      [disabled]="field.disabled"
       [value]="field.value | localeDate"
       [placeholder]="fieldConfig.placeholder"
       [required]="isRequired"
