readonly disabled fields

--- a/projects/icc/fields/src/date-field/date-field.component.html
+++ b/projects/icc/fields/src/date-field/date-field.component.html
@@ -11,7 +11,7 @@
       [disabled]="field.disabled"
       [value]="field.value | localeDate"
       [placeholder]="fieldConfig.placeholder"
-      [required]="isRequired"
+      [required]="required"
       readonly
     />
     <icc-calendar
