--- a/projects/icc/fields/src/textarea-field/textarea-field.component.html
+++ b/projects/icc/fields/src/textarea-field/textarea-field.component.html
@@ -9,7 +9,7 @@
       (click)="$event.stopPropagation()"
       (keyup)="onChange()"
       spellcheck="false"
-      [required]="isRequired"
+      [required]="required"
       placeholder="{{ fieldConfig.placeholder }}"
     >
     </textarea>
