--- a/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
+++ b/projects/icc/fields/src/upload-file-field/upload-file-field.component.html
@@ -9,7 +9,7 @@
       type="file"
       class="upload-file-input"
       [formControlName]="fieldConfig.fieldName!"
-      [required]="isRequired"
+      [required]="required"
       placeholder="{{ fieldConfig.placeholder }}"
     />
     <icc-icon
