--- a/projects/icc/grid/src/components/column-filter/select/select-filter.component.scss
+++ b/projects/icc/grid/src/components/column-filter/select/select-filter.component.scss
@@ -9,7 +9,7 @@
     ::ng-deep .icc-form-field {
       padding-bottom: 0px;
     }
-    ::ng-deep .icc-form-field-wrapper {
+    ::ng-deep .icc-form-field-container {
       border-bottom: none;
     }
     ::ng-deep input {
