--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.scss
@@ -10,7 +10,7 @@
     ::ng-deep .icc-form-field {
       padding-bottom: 0px;
     }
-    ::ng-deep .icc-form-field-wrapper {
+    ::ng-deep .icc-form-field-container {
       border-bottom: none;
     }
     ::ng-deep input {
