readonly disabled fields

--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.html
@@ -5,7 +5,10 @@
 <div>
   <icc-form [formConfig]="formConfig2" [formFields]="fieldSet2" [values]="values2"></icc-form>
 </div>
-
 <div>
   <icc-form [formConfig]="formConfig2" [formFields]="fieldSet3" [values]="values3"></icc-form>
+</div>
+
+<div>
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet4" [values]="values4"></icc-form>
 </div>
