hidden visible fields

--- a/projects/icc-demo/src/app/views/form/demos/form-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/form-page.component.html
@@ -1,1 +1,7 @@
-<icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
+<div>
+  <icc-form [formConfig]="formConfig" [formFields]="fieldSet" [values]="values"></icc-form>
+</div>
+
+<div>
+  <icc-form [formConfig]="formConfig3" [formFields]="fieldSet3" [values]="values3"></icc-form>
+</div>
