--- a/projects/icc-demo/src/app/views/form/demos/form-page.component.scss
+++ b/projects/icc-demo/src/app/views/form/demos/form-page.component.scss
@@ -2,7 +2,9 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  icc-form {
-    width: 600px;
+  div {
+    width: 100%;
+    display: flex;
+    padding: 20px;
   }
 }
