--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.scss
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.scss
@@ -2,9 +2,15 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+
   div {
     width: 100%;
     display: flex;
+    flex-direction: column;
     padding: 20px;
+
+    icc-form {
+      padding-bottom: 15px;
+    }
   }
 }
