--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -2,6 +2,7 @@
   <ng-container *ngIf="form" [formGroup]="form">
     <icc-form-field
       *ngIf="selectOptions$ | async as selectOptions"
+      [ngStyle]="{ display: fieldConfig.hidden ? 'none' : 'inherit' }"
       [iccLabelWidth]="fieldConfig.labelWidth"
       [iccFieldWidth]="fieldConfig.fieldWidth"
     >
