hidden visible fields

--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.html
@@ -8,4 +8,6 @@
 </div>
 <div>
   <icc-form [formConfig]="formConfig2" [formFields]="fieldSet5" [values]="values5"></icc-form>
+
+  <icc-form [formConfig]="formConfig2" [formFields]="fieldSet6" [values]="values6"></icc-form>
 </div>
