--- a/projects/icc/fields/src/textarea-field/textarea-field.component.html
+++ b/projects/icc/fields/src/textarea-field/textarea-field.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="form" [formGroup]="form">
   <icc-form-field
-    [ngStyle]="{ display: fieldConfig.hidden ? 'none' : 'inherit' }"
+    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
     [iccLabelWidth]="fieldConfig.labelWidth"
     [iccFieldWidth]="fieldConfig.fieldWidth"
   >
