hidden visible fields

--- a/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
+++ b/projects/icc/fields/src/radio-group-field/radio-group-field.component.html
@@ -11,6 +11,7 @@
     <ng-container *ngFor="let group of groups; trackBy: trackByIndex; let index = index">
       <icc-radio
         [value]="group.name"
+        [name]="fieldConfig.fieldName!"
         [field]="field"
         [fieldName]="fieldConfig.fieldName!"
         [checked]="getChecked(group.name)"
