--- a/projects/icc/fields/src/field-errors/field-errors.component.html
+++ b/projects/icc/fields/src/field-errors/field-errors.component.html
@@ -7,7 +7,7 @@
 
     <icc-error *ngSwitchCase="'required'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "COMMON.EDITOR.FIELD_IS_REQUIRED" | translate }}
+      {{ "ICC.EDITOR.FIELD_IS_REQUIRED" | translate }}
     </icc-error>
 
     <icc-error *ngSwitchCase="'minlength'">
