--- a/projects/icc/fields/src/field-errors/field-errors.component.html
+++ b/projects/icc/fields/src/field-errors/field-errors.component.html
@@ -7,27 +7,34 @@
 
     <icc-error *ngSwitchCase="'required'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "ICC.EDITOR.FIELD_IS_REQUIRED" | translate }}
+      {{ "ICC.UI.FIELDS.ERRORS.FIELD_IS_REQUIRED" | translate }}
     </icc-error>
 
     <icc-error *ngSwitchCase="'minlength'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "minlength" }}
+      {{ "ICC.UI.FIELDS.ERRORS.MIN_LENGTH" | translate: { length: error.requiredLength } }}
     </icc-error>
 
     <icc-error *ngSwitchCase="'maxlength'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "maxlength" }}
+      {{ "ICC.UI.FIELDS.ERRORS.MAX_LENGTH" | translate: { length: error.requiredLength } }}
     </icc-error>
 
     <icc-error *ngSwitchCase="'min'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "minvalue" }}
+      {{ "ICC.UI.FIELDS.ERRORS.MIN_VALUE" | translate: { value: error.min } }}
     </icc-error>
 
     <icc-error *ngSwitchCase="'max'">
       <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
-      {{ "maxvalue" }}
+      {{ "ICC.UI.FIELDS.ERRORS.MAX_VALUE" | translate: { value: error.max } }}
+    </icc-error>
+
+    <icc-error *ngSwitchCase="'confirmationPassword'">
+      <icc-icon [config]="{ icon: 'exclamation-circle', status: 'primary' }"></icc-icon>
+      {{ "ICC.UI.FIELDS.ERRORS.NOT_MATCH" | translate }}
     </icc-error>
   </ng-container>
 </ng-container>
+<!--
+confirmationPassword-->
