--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -7,7 +7,7 @@
   routerLinkActive="active"
 >
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon"></icc-icon>
-  <span class="icc-menu-title"> {{ title }} </span>
+  <span class="icc-menu-title"> {{ title | translate }} </span>
 </a>
 
 <icc-checkbox
@@ -17,10 +17,10 @@
   [disabled]="!!menuItem.disabled"
 >
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon"></icc-icon>
-  <span class="icc-menu-title"> {{ title }} </span>
+  <span class="icc-menu-title"> {{ title | translate }} </span>
 </icc-checkbox>
 
 <div *ngIf="!menuItem.link && !menuItem.checkbox" class="icc-menu-item">
   <icc-icon *ngIf="menuItem.icon" class="icc-menu-icon" [config]="menuItem.icon"></icc-icon>
-  <span class="icc-menu-title"> {{ title }} </span>
+  <span class="icc-menu-title"> {{ title | translate }} </span>
 </div>
