form editable to field editable

--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -8,3 +8,5 @@
 
 <div (click)="checkForm()">Check Form</div>
 <div (click)="resetForm()">Reset Form</div>
+<div (click)="editForm()">Edit Form</div>
+<div (click)="viewForm()">View Form</div>
