--- a/projects/icc-demo/src/app/views/form/demos/password-page.component.scss
+++ b/projects/icc-demo/src/app/views/form/demos/password-page.component.scss
@@ -5,6 +5,7 @@
 
   div {
     width: 100%;
+    height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     padding: 20px;
