--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -1,3 +1,10 @@
+<icc-panel-top-bar>
+  <button (click)="checkForm()">Check Form</button>
+  <button (click)="resetForm()">Reset Form</button>
+  <button (click)="editForm()">Edit Form</button>
+  <button (click)="viewForm()">View Form</button>
+</icc-panel-top-bar>
+
 <form [formGroup]="form" [iccFormLabelWidth]="formConfig.labelWidth">
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
     <icc-fields *ngIf="fieldConfig.fieldType !== 'fieldset'" [form]="form" [fieldConfig]="fieldConfig"> </icc-fields>
@@ -5,8 +12,3 @@
     </icc-fieldset>
   </ng-container>
 </form>
-
-<div (click)="checkForm()">Check Form</div>
-<div (click)="resetForm()">Reset Form</div>
-<div (click)="editForm()">Edit Form</div>
-<div (click)="viewForm()">View Form</div>
