--- a/projects/icc/form/src/form.component.html
+++ b/projects/icc/form/src/form.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="formConfig$ | async as formConfig">
+<icc-panel *ngIf="formConfig$ | async as formConfig">
   <ng-container *ngIf="formFieldsConfig$ | async as formFields">
     <ng-container *ngIf="formData$ | async as formData">
       <icc-form-view [formConfig]="formConfig" [formFields]="formFields" [values]="formData"> </icc-form-view>
     </ng-container>
   </ng-container>
-</ng-container>
+</icc-panel>
